[package]
name = "radix-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
game-loop = { version = "0.10.2", features = [ "winit" ] }
image = "0.24.7"
log = "0.4.19"
mlua = { version = "0.9.1", features = [ "vendored", "lua54" ] }
pixels = "0.13.0"
serde = { version = "1.0.186", features = [ "derive" ] }
serde_yaml = "0.9.25"
strum = "0.25.0"
strum_macros = "0.25.2"
winit = "0.28.6"
winit_input_helper = "0.14.1"
